# py311

./: .gitignore  codebase.txt  debug_ir.py  pyproject.toml
RL_absolute_zero/: fig7.ipynb
gopher/: gopher_tunnel.ipynb
scripts/: format_notebook.py
stocks/: combined_output.txt  config.py  config_obsolete.py  run_sequence.py  run_sequence_v2.py
stocks/,_vscode/: settings.json
stocks/colab/: _pm_backtest_orchestrator_v6.ipynb  _pm_worker_sharpe_strategy.ipynb  _trash.ipynb  _view_backtest_results.ipynb  colab_finviz_download_v0.ipynb  colab_finviz_download_v1.ipynb  colab_finviz_download_v3.ipynb  df_finviz_2025-12-28_stocks_etfs.parquet  output_notebook_chunk_40.ipynb  pm_control_5a1.ipynb  pm_run_5b_all_lower_sharpe.ipynb  ticker_2025-12-28_stocks_etfs.csv  working_5c0.ipynb
stocks/data/: 2025-04-25_df_common_tickers_stocks_etfs.parquet  2025-04-25_df_finviz_merged_stocks_etfs.parquet  2025-04-25_df_finviz_n_ratios_stocks_etfs.parquet  2025-04-25_df_finviz_stocks_etfs.parquet  2025-04-25_df_perf_ratios_stocks_etfs.parquet  2025-04-28_df_common_tickers_stocks_etfs.parquet  2025-04-28_df_finviz_merged_stocks_etfs.parquet  2025-04-28_df_finviz_n_ratios_stocks_etfs.parquet  2025-04-28_df_finviz_stocks_etfs.parquet  2025-04-28_df_perf_ratios_stocks_etfs.parquet  2025-04-29_df_common_tickers_stocks_etfs.parquet  2025-04-29_df_finviz_merged_stocks_etfs.parquet  2025-04-29_df_finviz_n_ratios_stocks_etfs.parquet  2025-04-29_df_finviz_stocks_etfs.parquet  2025-04-29_df_perf_ratios_stocks_etfs.parquet  2025-04-30_df_common_tickers_stocks_etfs.parquet  2025-04-30_df_finviz_merged_stocks_etfs.parquet  2025-04-30_df_finviz_n_ratios_stocks_etfs.parquet  2025-04-30_df_finviz_stocks_etfs.parquet  2025-04-30_df_perf_ratios_stocks_etfs.parquet  2025-05-01_df_common_tickers_stocks_etfs.parquet  2025-05-01_df_finviz_merged_stocks_etfs.parquet  2025-05-01_df_finviz_n_ratios_stocks_etfs.parquet  2025-05-01_df_finviz_stocks_etfs.parquet  2025-05-01_df_perf_ratios_stocks_etfs.parquet  2025-05-02_df_common_tickers_stocks_etfs.parquet  2025-05-02_df_finviz_merged_stocks_etfs.parquet  2025-05-02_df_finviz_n_ratios_stocks_etfs.parquet  2025-05-02_df_finviz_stocks_etfs.parquet  2025-05-02_df_perf_ratios_stocks_etfs.parquet  2025-05-05_df_common_tickers_stocks_etfs.parquet  2025-05-05_df_finviz_merged_stocks_etfs.parquet  2025-05-05_df_finviz_n_ratios_stocks_etfs.parquet  2025-05-05_df_finviz_stocks_etfs.parquet  2025-05-05_df_perf_ratios_stocks_etfs.parquet  2025-05-06_df_common_tickers_stocks_etfs.parquet  2025-05-06_df_finviz_merged_stocks_etfs.parquet  2025-05-06_df_finviz_n_ratios_stocks_etfs.parquet  2025-05-06_df_finviz_stocks_etfs.parquet  2025-05-06_df_perf_ratios_stocks_etfs.parquet  (+412 more)
stocks/notebooks/: _working.ipynb  _working5.ipynb  _working8.ipynb  _working_OHLCV.ipynb  _working_backtest0.ipynb  _working_backtest1.ipynb  colab_finviz_yahoo_download_v10.ipynb  colab_finviz_yahoo_download_v11.ipynb  colab_finviz_yahoo_download_v11_.ipynb  colab_finviz_yahoo_download_v6.ipynb  colab_finviz_yahoo_download_v7.ipynb  colab_finviz_yahoo_download_v8.ipynb  config.py  df_adj_close.parquet  (+144 more)
stocks_v0_works/: config.py  run_sequence_v2.py
stocks_v1/: config.py
(+1499 files in other folders)
