[tool.poetry]
name = "py311"
version = "0.1.0"
description = ""
authors = ["pympk <yee_ping@yahoo.com>"]
readme = "README.md"
package-mode = false  # <--- ADD THIS LINE

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
# langchain = "^0.2.0"
# langchain-openai = "^0.1.7"
chromadb = "^0.5.0"
# llama-index = "^0.10.37"
# openai = "^1.30.1"
# streamlit = "^1.34.0"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.21.0"
# yt-dlp = "^2024.4.9"
# pydub = "^0.25.1"
# langchain-community = "^0.2.0"
# langchainhub = "^0.1.15"
# llama-index-readers-web = "^0.1.17"
# openpyxl = "^3.1.2"
ollama = "^0.2.0"
# llama-index-llms-ollama = "^0.1.4"
# llama-index-embeddings-ollama = "^0.1.2"
#llama-index-vector-stores-chroma = "^0.1.8"
matplotlib = "^3.9.0"
# pytube = "^15.0.0"
pip = "^24.1"
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "v20231117" }
# sentence-transformers = "^3.0.1"
ipywidgets = "^8.1.3"
# umap-learn = "^0.5.6"
# pytubefix = "^6.9.2"
# yfinance = "^0.2.43"
plotly = "^5.24.0"
ta-lib = "^0.4.32"
nbconvert = "^7.16.4"
# pyzmq = "^26.2.0"
# pytesseract = "^0.3.13"
#pillow = "^10.4.0"
# einops = "^0.8.0"
# datasets = "^3.0.1"
# python-fasthtml = "^0.8.0"
#babel = "^2.16.0"
# fastapi = "^0.115.8"
# uvicorn = "^0.34.0"
# gradio = "^5.15.0"
python-dotenv = "^1.0.1"
# unstructured = "^0.16.20"
python-magic-bin = "^0.4.14"
# alpha-vantage = "^3.0.0"
pyfolio = "^0.9.2"
empyrical = "^0.5.5"
tabulate = "^0.9.0"
pyportfolioopt = "^1.5.6"
# pyautogui = "^0.9.54"
# pyperclip = "^1.9.0"
opencv-python = "^4.11.0.86"
fake-useragent = "^2.1.0"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
