[tool.poetry]
name = "py311"
version = "0.1.0"
description = ""
authors = ["pympk <yee_ping@yahoo.com>"]
readme = "README.md"

# 👇 This disables trying to install your project as a package
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
chromadb = "^0.5.0"
ollama = "^0.2.0"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
selenium = "^4.21.0"
matplotlib = "^3.10.3"
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "v20231117" }
ipywidgets = "^8.1.3"
ta-lib = "^0.4.32"
nbconvert = "^7.16.4"
python-dotenv = "^1.0.1"
python-magic-bin = "^0.4.14"
pyfolio = "^0.9.2"
empyrical = "^0.5.5"
tabulate = "^0.9.0"
pyportfolioopt = "^1.5.6"
pyautogui = "^0.9.54"
pyperclip = "^1.9.0"
opencv-python = "^4.11.0.86"
fake-useragent = "^2.1.0"
scipy = "^1.15.2"
adjusttext = "^1.3.0"
mplcursors = "^0.6"
ipympl = "^0.9.7"
numba = "^0.61.2"
llvmlite = "^0.44.0"
cvxpy = { extras = ["cbc"], version = "^1.7.1" }
pyscipopt = "^5.5.0"
plotly = ">=5.0.0,<6.0.0"           # Required by pyportfolioopt
xarray = "0.16.1"                   # Required by aicsimageio

# Optional: uncomment if you use these
# langchain = "^0.2.0"
# langchain-openai = "^0.1.7"
# llama-index = "^0.10.37"
papermill = "^2.6.0"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"